--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,9 @@
         "stripe/stripe-php": "^16.2",
         "razorpay/razorpay": "^2.9",
         "phpmailer/phpmailer": "^6.9",
-        "laravel/homestead": "^15.0"
+        "laravel/homestead": "^15.0",
+        "google/apiclient": "^2.18",
+        "dompdf/dompdf": "^3.0"
     },
     "autoload": {
         "psr-4": {
