--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "create-react-app": "^5.0.1",
     "express": "^4.21.1",
     "express-session": "^1.18.1",
+    "http-proxy-middleware": "^3.0.3",
     "laravel": "^0.0.1",
     "mongoose": "^8.8.0",
     "npx": "^10.2.2",
